--- a/environmentoptional.sty
+++ b/environmentoptional.sty
@@ -7,12 +7,14 @@
 
 % --- Global Metadata Storage ---
 \prop_new:N \g__envopt_metadata_prop
+\cs_new_protected_nopar:Npn \__envopt_sep { }
 
 % --- Variables ---
-\int_new:N \l__envopt_opt_count_int
-\int_new:N \l__envopt_mand_count_int
-\int_new:N \l__envopt_total_count_int
-\tl_new:N \l__envopt_name_tl
+\int_new:N \g__envopt_opt_count_int
+\int_new:N \g__envopt_mand_count_int
+\int_new:N \g__envopt_total_count_int
+\tl_new:N \g__envopt_name_tl
+
 \tl_new:N \l__envopt_arg_spec_tl
 \tl_new:N \l__envopt_m_spec_tl
 \tl_new:N \l__envopt_exec_tl
@@ -21,6 +23,7 @@
 
 \seq_new:N \l__envopt_def_vals_seq
 \seq_new:N \l__envopt_values_seq
+\tl_new:N \l__envopt_defaults_tl
 
 % --- Error messages ---
 \msg_new:nnn { environmentoptional } { name-mismatch }
@@ -33,48 +36,49 @@
   The~sum~of~optional~(#1)~and~mandatory~(#2)~arguments~must~be~maximum~9.
 }
 
-% --- \newenvironmentoptionals Implementation ---
+% --- Helpers ---
 
-\NewDocumentCommand{\newenvironmentoptionals}{ m O{0} O{0} }
-{
-  \tl_set:Nn \l__envopt_name_tl { #1 }
-  \int_set:Nn \l__envopt_opt_count_int { #2 }
-  \int_set:Nn \l__envopt_mand_count_int { #3 }
-  \int_set:Nn \l__envopt_total_count_int { #2 + #3 }
-  
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 9 }
-  {
-    \msg_error:nnxx { environmentoptional } { too-many-args }
-    { \int_use:N \l__envopt_opt_count_int }
-    { \int_use:N \l__envopt_mand_count_int }
-  }
-  {
-    \prop_gput:Nnn \g__envopt_metadata_prop { #1 } { #2 : #3 }
-    \seq_clear:N \l__envopt_def_vals_seq
-    \__envopt_scan_opt_defaults:n { #2 }
-  }
-}
-
-\cs_new_protected_nopar:Npn \__envopt_scan_opt_defaults:n #1
+\cs_new_protected:Npn \__envopt_scan_defaults:nn #1 #2
 {
   \int_compare:nNnTF { #1 } > { 0 }
   {
     \peek_meaning_ignore_spaces:NTF [ 
-      { \__envopt_grab_opt_default:n { #1 } }
+      { \__envopt_grab_default:nn { #1 } { #2 } }
       { 
         \seq_put_right:Nn \l__envopt_def_vals_seq { } 
-        \__envopt_scan_opt_defaults:n { \int_eval:n { #1 - 1 } }
+        \__envopt_scan_defaults:nn { \int_eval:n { #1 - 1 } } { #2 }
       }
   }
   {
-    \__envopt_read_env_code:w
+    #2
   }
 }
 
-\NewDocumentCommand{ \__envopt_grab_opt_default:n } { m r[] }
+\NewDocumentCommand{ \__envopt_grab_default:nn } { m m r[] }
 {
-  \seq_put_right:Nn \l__envopt_def_vals_seq { #2 }
-  \__envopt_scan_opt_defaults:n { \int_eval:n { #1 - 1 } }
+  \seq_put_right:Nn \l__envopt_def_vals_seq { #3 }
+  \__envopt_scan_defaults:nn { \int_eval:n { #1 - 1 } } { #2 }
+}
+
+% --- \newenvironmentoptionals Implementation ---
+
+\NewDocumentCommand{\newenvironmentoptionals}{ m O{0} O{0} }
+{
+  \tl_gset:Nn \g__envopt_name_tl { #1 }
+  \int_gset:Nn \g__envopt_opt_count_int { #2 }
+  \int_gset:Nn \g__envopt_mand_count_int { #3 }
+  \int_gset:Nn \g__envopt_total_count_int { #2 + #3 }
+  
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 9 }
+  {
+    \msg_error:nnxx { environmentoptional } { too-many-args }
+    { \int_use:N \g__envopt_opt_count_int }
+    { \int_use:N \g__envopt_mand_count_int }
+  }
+  {
+    \seq_clear:N \l__envopt_def_vals_seq
+    \__envopt_scan_defaults:nn { #2 } { \__envopt_read_env_code:w }
+  }
 }
 
 \NewDocumentCommand{ \__envopt_read_env_code:w } { +m +m }
@@ -95,46 +99,59 @@
     \tl_put_right:Nn \l__envopt_m_spec_tl { m }
   }
   
-  \int_step_inline:nn { \l__envopt_mand_count_int }
+  \int_step_inline:nn { \g__envopt_mand_count_int }
   {
     \tl_put_right:Nn \l__envopt_arg_spec_tl { m }
     \tl_put_right:Nn \l__envopt_m_spec_tl { m }
   }
   
+  % Store defaults as delimited string
+  \tl_set:Nx \l_tmpa_tl { \seq_use:Nn \l__envopt_def_vals_seq { ||ENVOPTSEP|| } }
+  
+  \use:x {
+    \exp_not:N \prop_gput:Nnn \exp_not:N \g__envopt_metadata_prop 
+      { \exp_not:V \g__envopt_name_tl } 
+      { 
+        \int_use:N \g__envopt_opt_count_int : 
+        \int_use:N \g__envopt_mand_count_int : 
+        { \exp_not:V \l_tmpa_tl } 
+      }
+  }
+  
   % 1. Define Backing Begin command (m...m)
   \use:x {
-    \exp_not:N \DeclareDocumentCommand \exp_not:c { envopt@ \tl_use:N \l__envopt_name_tl @begin }
+    \exp_not:N \DeclareDocumentCommand \exp_not:c { envopt@ \tl_use:N \g__envopt_name_tl @begin }
     { \exp_not:V \l__envopt_m_spec_tl }
     { \exp_not:V \l__envopt_begin_code_tl }
   }
   
   % 2. Define Backing End command
   \use:x {
-    \exp_not:N \DeclareDocumentCommand \exp_not:c { envopt@ \tl_use:N \l__envopt_name_tl @end }
+    \exp_not:N \DeclareDocumentCommand \exp_not:c { envopt@ \tl_use:N \g__envopt_name_tl @end }
     { }
     { \exp_not:V \l__envopt_end_code_tl }
   }
   
   % 3. Build Wrapper Body: \backing {#1}{#2}...
-  \tl_set:Nn \l_tmpa_tl { \use:c { envopt@ \tl_use:N \l__envopt_name_tl @begin } }
+  \tl_set:Nn \l_tmpa_tl { \use:c { envopt@ \tl_use:N \g__envopt_name_tl @begin } }
   
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 0 } { \tl_put_right:Nn \l_tmpa_tl { { ##1 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 1 } { \tl_put_right:Nn \l_tmpa_tl { { ##2 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 2 } { \tl_put_right:Nn \l_tmpa_tl { { ##3 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 3 } { \tl_put_right:Nn \l_tmpa_tl { { ##4 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 4 } { \tl_put_right:Nn \l_tmpa_tl { { ##5 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 5 } { \tl_put_right:Nn \l_tmpa_tl { { ##6 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 6 } { \tl_put_right:Nn \l_tmpa_tl { { ##7 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 7 } { \tl_put_right:Nn \l_tmpa_tl { { ##8 } } } { }
-  \int_compare:nNnTF { \l__envopt_total_count_int } > { 8 } { \tl_put_right:Nn \l_tmpa_tl { { ##9 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 0 } { \tl_put_right:Nn \l_tmpa_tl { { ##1 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 1 } { \tl_put_right:Nn \l_tmpa_tl { { ##2 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 2 } { \tl_put_right:Nn \l_tmpa_tl { { ##3 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 3 } { \tl_put_right:Nn \l_tmpa_tl { { ##4 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 4 } { \tl_put_right:Nn \l_tmpa_tl { { ##5 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 5 } { \tl_put_right:Nn \l_tmpa_tl { { ##6 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 6 } { \tl_put_right:Nn \l_tmpa_tl { { ##7 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 7 } { \tl_put_right:Nn \l_tmpa_tl { { ##8 } } } { }
+  \int_compare:nNnTF { \g__envopt_total_count_int } > { 8 } { \tl_put_right:Nn \l_tmpa_tl { { ##9 } } } { }
 
   \use:x {
-    \exp_not:N \DeclareDocumentEnvironment { \tl_use:N \l__envopt_name_tl } { \exp_not:V \l__envopt_arg_spec_tl }
+    \exp_not:N \DeclareDocumentEnvironment { \tl_use:N \g__envopt_name_tl } { \exp_not:V \l__envopt_arg_spec_tl }
     { 
        \exp_not:V \l_tmpa_tl
     }
     {
-       \exp_not:N \use:c { envopt@ \tl_use:N \l__envopt_name_tl @end }
+       \exp_not:N \use:c { envopt@ \tl_use:N \g__envopt_name_tl @end }
     }
   }
 }
@@ -143,13 +160,13 @@
 
 \NewDocumentCommand{\beginoptionals}{ m }
 {
-  \tl_set:Nn \l__envopt_name_tl { #1 }
+  \tl_gset:Nn \g__envopt_name_tl { #1 }
   \prop_get:NnNTF \g__envopt_metadata_prop { #1 } \l_tmpa_tl
   {
-    \exp_after:wN \__envopt_split_counts:w \l_tmpa_tl \q_stop
-    \int_set:Nn \l__envopt_total_count_int { \l__envopt_opt_count_int + \l__envopt_mand_count_int }
+    \exp_after:wN \__envopt_split_metadata:w \l_tmpa_tl \q_stop
+    \int_gset:Nn \g__envopt_total_count_int { \g__envopt_opt_count_int + \g__envopt_mand_count_int }
     \seq_clear:N \l__envopt_values_seq
-    \__envopt_scan_args_opt:n { \l__envopt_opt_count_int }
+    \__envopt_scan_args_opt:n { \g__envopt_opt_count_int }
   }
   {
     \__envopt_grab_counts:w
@@ -158,33 +175,52 @@
 
 \NewDocumentCommand{ \__envopt_grab_counts:w } { O{0} O{0} }
 {
-  \int_set:Nn \l__envopt_opt_count_int { #1 }
-  \int_set:Nn \l__envopt_mand_count_int { #2 }
-  \int_set:Nn \l__envopt_total_count_int { #1 + #2 }
+  \int_gset:Nn \g__envopt_opt_count_int { #1 }
+  \int_gset:Nn \g__envopt_mand_count_int { #2 }
+  \int_gset:Nn \g__envopt_total_count_int { #1 + #2 }
   \seq_clear:N \l__envopt_values_seq
-  \__envopt_scan_args_opt:n { \l__envopt_opt_count_int }
+  \seq_clear:N \l__envopt_def_vals_seq
+  \__envopt_scan_defaults:nn { #1 } { \__envopt_scan_args_opt:n { #1 } }
 }
 
-\cs_new:Npn \__envopt_split_counts:w #1 : #2 \q_stop
+\cs_new:Npn \__envopt_split_metadata:w #1 : #2 : #3 \q_stop
 {
-  \int_set:Nn \l__envopt_opt_count_int { #1 }
-  \int_set:Nn \l__envopt_mand_count_int { #2 }
+  \int_gset:Nn \g__envopt_opt_count_int { #1 }
+  \int_gset:Nn \g__envopt_mand_count_int { #2 }
+  \tl_set:Nn \l_tmpa_tl { #3 }
+  \seq_set_split:Nnn \l__envopt_def_vals_seq { ||ENVOPTSEP|| } { #3 }
 }
 
 \cs_new_protected_nopar:Npn \__envopt_scan_args_opt:n #1
 {
   \int_compare:nNnTF { #1 } > { 0 }
   {
-    \__envopt_grab_arg_opt:n { #1 }
+    \peek_meaning_ignore_spaces:NTF [
+      { \__envopt_grab_arg_opt:n { #1 } }
+      { \__envopt_fill_defaults:n { #1 } }
   }
   {
-    \__envopt_scan_args_mand:n { \l__envopt_mand_count_int }
+    \__envopt_scan_args_mand:n { \g__envopt_mand_count_int }
+  }
+}
+
+\cs_new_protected_nopar:Npn \__envopt_fill_defaults:n #1
+{
+  \int_compare:nNnTF { #1 } > { 0 }
+  {
+    \seq_pop_left:NN \l__envopt_def_vals_seq \l_tmpa_tl
+    \seq_put_right:NV \l__envopt_values_seq \l_tmpa_tl
+    \__envopt_fill_defaults:n { \int_eval:n { #1 - 1 } }
+  }
+  {
+    \__envopt_scan_args_mand:n { \g__envopt_mand_count_int }
   }
 }
 
 \NewDocumentCommand{ \__envopt_grab_arg_opt:n } { m r[] }
 {
   \seq_put_right:Nn \l__envopt_values_seq { #2 }
+  \seq_pop_left:NN \l__envopt_def_vals_seq \l_tmpa_tl
   \__envopt_scan_args_opt:n { \int_eval:n { #1 - 1 } }
 }
 
@@ -207,33 +243,34 @@
 
 \cs_new_protected_nopar:Npn \__envopt_read_body_capture:w #1 \endoptionals #2
 {
-  \str_if_eq:VnTF \l__envopt_name_tl { #2 }
+  \tl_set:Nn \l_tmpa_tl { #2 }
+  \str_if_eq:VVTF \g__envopt_name_tl \l_tmpa_tl
   {
     \__envopt_execute:n { #1 }
   }
   {
     \msg_error:nnxx { environmentoptional } { name-mismatch }
-    { \tl_use:N \l__envopt_name_tl }
+    { \tl_use:N \g__envopt_name_tl }
     { #2 }
   }
 }
 
 \cs_new_protected_nopar:Npn \__envopt_execute:n #1
 {
-  \cs_if_exist:cTF { envopt@\tl_use:N \l__envopt_name_tl @begin }
+  \cs_if_exist:cTF { envopt@\tl_use:N \g__envopt_name_tl @begin }
   {
-    \tl_set:Nn \l__envopt_exec_tl { \use:c { envopt@\tl_use:N \l__envopt_name_tl @begin } }
+    \tl_set:Nn \l__envopt_exec_tl { \use:c { envopt@\tl_use:N \g__envopt_name_tl @begin } }
     \seq_map_inline:Nn \l__envopt_values_seq
     {
        \tl_put_right:Nn \l__envopt_exec_tl { { ##1 } }
     }
     \l__envopt_exec_tl
     #1
-    \use:c { envopt@\tl_use:N \l__envopt_name_tl @end }
+    \use:c { envopt@\tl_use:N \g__envopt_name_tl @end }
   }
   {
     \tl_clear:N \l__envopt_arg_spec_tl
-    \int_step_inline:nn { \l__envopt_total_count_int } { \tl_put_right:Nn \l__envopt_arg_spec_tl { m } }
+    \int_step_inline:nn { \g__envopt_total_count_int } { \tl_put_right:Nn \l__envopt_arg_spec_tl { m } }
     
     \use:x {
        \exp_not:N \DeclareDocumentCommand \exp_not:N \__envopt_temp_cmd { \exp_not:V \l__envopt_arg_spec_tl }
